biocomplexity/templates/covid-19-forecast/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: covid-19-forecast-service
  namespace: uvarc-services
spec:
  selector:
    app: covid-19-forecast
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
