biocomplexity/templates/covid-19-forecast/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "covid-19-forecast-service"
  name: covid-19-forecast-nginx-ingress
  namespace: uvarc-services
spec:
  rules:
    - host: bii-forecast.pods.uvarc.io
      http:
        paths:
          - backend:
              serviceName: covid-19-forecast-service
              servicePort: 8080
            path: /
    - host: covid19-forecast.pods.uvarc.io
      http:
        paths:
          - backend:
              serviceName: covid-19-forecast-service
              servicePort: 8080
            path: /
